testcases/valid/test.shp
class Main<p1> where
    p1: [Main<p1>]
{
    u: i32;

    fn getter(): i32
    {
        return u;
    }

    fn setter(x: i32)
    {
        u = x;
    }
}

layout Foo: Main = rec{u};
