testcases/semantic_error/return_expr.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn setter(x: i32)
    {
        f = x;
        return x;
    }
}
